# LLM-Instruction-Tuning-Text-Classification

./: .gitignore  README.md  pyproject.toml  requirements.txt  results.txt
sagemaker/: deploy_sm.py  invoke_sm.py  train_sm.py
sagemaker/inference/: inference.py  requirements.txt
scripts/: predict.py  train.py
scripts/llama-3.2-1b-arxiver-lora/logs/: events.out.tfevents.1757595634.MSI.5416.0
src/: __init__.py  config.py  data.py  infer.py  metrics.py  model.py  prepare_all_arxiver_data.py  prepare_top_5_arxiver_data.py  training.py
